scss/_settings.scss
// Foundation by ZURB
// foundation.zurb.com
// Licensed under MIT Open Source

//CUSTOM CSS

$scarlet : #E21936;
$indigo :  #07A0D6;
$money : #9cc605;
$dark : #383838;
$white : #ffffff;



#reslogotext{
	height: 80px;
}

#topPage {
	overflow: hidden;
}

.icons {
	height: 6em;
}

@media only screen and (max-width: 40em) {
	#reslogotext{
	height: 50px;
	margin-top: 15px;
	}	
	.icons {
	height: 3em;
	}
	
 } 			 

 @media only screen and (min-width: 40.063em) and (max-width: 64em) { 
 	#reslogotext {
 	height: 74px;
 	}
 	
 }

 //Navbar tab colors and active states
 #aboutBtn.active a {
 	background-color: $scarlet;
 }
 #aboutBtn:hover a{
 	background-color: $scarlet;
 }
 #eventsBtn.active a {
 	background-color: $dark;
 }
 #eventsBtn:hover a {
 	background-color: $dark;
 	color: $white;
 }
 #getinvolvedBtn.active a {
 	background-color: $indigo;
 }
 #getinvolvedBtn:hover a {
	background-color: $indigo;
 }
 #teamBtn.active a {
 	background-color: $dark;
 	color: $white;
 }
 #teamBtn:hover a {
 	background-color: $dark;
 }
 #contactBtn.active a {
 	background-color:  $money;	
 }
 #contactBtn:hover a {
 	background-color: $money;
 }

.title-area {
	padding-top: 0px;
	padding-left: 2px;
}


.bCK {
	background-color: #f4f4f4;
}

nav {
	box-shadow: 0 8px 10px -10px black;
}



.fright {
	float: right;
}


 

#slogan {
	color: $dark;
	opacity: 0;
}



.iconTitle {
	margin-top: 5%;
}


#red {
	width: 100%;
	background-color: $scarlet;
	color: white;
}

//adjust spacing at different sizes with media queries
//general top and bottom space for each section

.TopSpace {
	height:70px;
}

.bottomSpace {
	height: 90px;
}
//specific spacings for elements in between
#logoBottomSpace {
	height: 70px;
}
#overIconSpace {
	height: 50px;
}
#underIconSpace {
	height: 50px;
}



#blue {
	background-color: $indigo ;
	color: white;
}

footer {
	text-align: center;
	font-size: 0.7em;
}

footer a {
	color: white;

}


#green {
	background-color: $money;
	color: white;
}
#green h4{
	color: white;
}
#blue h1 {
	color: white;
}
#blue h4 {
	color: white;
}
#red h2 {
	color: white;
}
#red h6 {
	color: white
}
#green h1 {
	color :white;
}
#red h3 {
	color: white;
}
/* ... */

